Issue #2978073: Changed [VMI] Hero content group z-index to 3 for in the hero view mode xlarge

--- a/css/hero/layout/hero-xlarge.css
+++ b/css/hero/layout/hero-xlarge.css
@@ -9,4 +9,5 @@
   left: 5%;
   right: 5%;
   padding: 1.2em;
+  z-index: 3;
 }
